--- a/style.css
+++ b/style.css
@@ -5,24 +5,35 @@
     --gris: #757575;
     --oscuro: #212121;
 }
+
 html {
     box-sizing: border-box;
     min-height: 100%;
-    scroll-snap-type: y mandatory;
+    scroll-behavior: smooth;
 }
-*, *:before, *:after {
+
+*,
+*:before,
+*:after {
     box-sizing: inherit;
 }
+
 p {
     line-height: 2;
 }
+
 
 
 /* Estilos del Header */
 .header {
     background-color: black;
     padding: 10px 0;
+    position: fixed; /* Asegura que se quede fijo en la parte superior */
+    top: 0; /* Asegura que se quede en la parte superior */
+    width: 100%; /* Hace que el navbar ocupe todo el ancho */
+    z-index: 1; /* Asegura que se quede por encima de otros elementos */
 }
+
 
 .contenedor-header {
     display: flex;
@@ -81,29 +92,42 @@ body {
     font-family: 'Krub', sans-serif;
     background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
     min-height: 100%;
-    
+
 }
+
 h1 {
     font-size: 1.4rem;
 }
+
 h1 span {
     font-size: 1.4rem;
 }
-h1, h2, h3 {
+
+h1,
+h2,
+h3 {
     text-align: center;
 }
+
 h2 {
     font-size: 2.4rem;
 }
+
 h3 {
     color: var(--secundario);
     font-weight: 400;
     font-size: 1.6rem;
 }
+
 .contenedor {
     margin: 0 auto;
     max-width: 1200px;
 }
+.contenedor h2 {
+    text-align: center;
+    margin-top: 4.3rem;
+}
+
 .contenedor p {
     justify-content: center;
     text-align: center;
@@ -115,13 +139,15 @@ h3 {
     margin-bottom: 3rem;
     background-color: rgba(255, 255, 255, 1);
     border-radius: 10px;
-    -webkit-box-shadow: 0px 11px 15px -9px rgba(0,0,0,0.63);
-    -moz-box-shadow: 0px 11px 15px -9px rgba(0,0,0,0.63);
-    box-shadow: 0px 11px 15px -9px rgba(0,0,0,0.63);
+    -webkit-box-shadow: 0px 11px 15px -9px rgba(0, 0, 0, 0.63);
+    -moz-box-shadow: 0px 11px 15px -9px rgba(0, 0, 0, 0.63);
+    box-shadow: 0px 11px 15px -9px rgba(0, 0, 0, 0.63);
 }
+
 .nav-bg {
     background-color: var(--secundario);
 }
+
 .navegacion {
     scroll-snap-align: center;
     scroll-snap-stop: always;
@@ -129,54 +155,63 @@ h3 {
     flex-direction: column;
     align-items: center;
 }
+
 @media (min-width:768px) {
     .navegacion {
         flex-direction: row;
         justify-content: space-between;
     }
 }
-.navegacion a{
+
+.navegacion a {
     padding: 1rem 2rem;
     color: var(--blanco);
     text-decoration: none;
     font-size: 1.4rem;
     font-weight: 700;
 }
+
 .navegacion a:hover {
     background-color: var(--primario);
     color: var(--oscuro);
 }
+
 .navegacion a:last-of-type {
-    margin-bottom:0;
+    margin-bottom: 0;
 }
+
 @media (min-width:768px) {
-    .navegacion a{
+    .navegacion a {
         margin-bottom: 0;
     }
 }
+
 .hero {
     height: 450px;
-    background-image: url(hero.jpg);
+    background-image: url(img/hero.jpg);
     background-size: cover;
     margin-bottom: 2rem;
     position: relative;
 }
+
 .contenido-hero {
-    background-color: rgb(0 0 0 / 70%); /** Otra opción **/
+    background-color: rgb(0 0 0 / 70%);
+    /** Otra opción **/
     background-color: rgba(0, 0, 0, .7);
     position: absolute;
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
-   align-items: center;
-   justify-content: center;
+    align-items: center;
+    justify-content: center;
 }
 
-.contenido-hero h2, 
+.contenido-hero h2,
 .contenido-hero p {
     color: var(--blanco);
 }
+
 .boton {
     background-color: var(--secundario);
     color: var(--blanco);
@@ -187,15 +222,18 @@ h3 {
     text-decoration: none;
     text-transform: uppercase;
     font-size: 1.2rem;
-    border:none;
+    border: none;
 }
-.boton:hover{
+
+.boton:hover {
     cursor: pointer;
 }
+
 .servicios {
     scroll-snap-align: center;
     scroll-snap-stop: always;
 }
+
 @media (min-width:768px) {
     .servicios {
         display: grid;
@@ -203,9 +241,19 @@ h3 {
         column-gap: 1rem;
     }
 }
+
 .servicio {
-    text-align:center;
+    text-align: center;
 }
+.servicio ul {  
+text-align: left;
+line-height: 1.5rem;
+}
+
+.servicio li:first-of-type {
+    margin-top: 1rem;
+}
+
 .servicio {
     display: flex;
     flex-direction: column;
@@ -222,6 +270,7 @@ h3 {
     background-color: var(--primario);
     border-radius: 50%;
 }
+
 .iconos i {
     font-size: 2rem;
     color: var(--oscuro);
@@ -235,6 +284,7 @@ h3 {
     scroll-snap-align: center;
     scroll-snap-stop: always;
 }
+
 .formulario legend {
     text-align: center;
     font-size: 1.2rem;
@@ -244,12 +294,14 @@ h3 {
     text-transform: uppercase;
     font-weight: 700;
 }
+
 @media (min-width:768px) {
     .formulario {
         max-width: 800px;
         margin: 0 auto;
     }
 }
+
 .contenedor-campos {
     display: flex;
     justify-content: space-between;
@@ -260,28 +312,33 @@ h3 {
     margin-bottom: 1rem;
     width: 100%;
 }
+
 @media (min-width:480px) {
     .campo {
         display: flex;
         align-items: center;
     }
 }
+
 @media (min-width: 768px) {
-    .campo{
+    .campo {
         flex: 0 0 calc(50% - .5rem)
     }
 }
+
 .campo label {
     color: var(--blanco);
     font-weight: 700;
     margin-bottom: .5rem;
     display: block;
 }
+
 @media (min-width:480px) {
     .campo label {
         flex: 0 0 90px;
     }
 }
+
 .campo input[type="text"],
 .campo input[type="tel"],
 .campo input[type="mail"],
@@ -291,20 +348,22 @@ h3 {
     border: none;
     border-radius: .5rem;
 }
+
 @media (min-width: 768px) {
-    :is(.campo) :is( 
-        input[type="text"], 
-        input[type="text"],  
-        input[type="tel"],  
-        input[type="mail"] , 
-        textarea ) {
+
+    :is(.campo) :is(input[type="text"],
+        input[type="text"],
+        input[type="tel"],
+        input[type="mail"],
+        textarea) {
         flex: 1;
     }
 }
 
-.w-100{
+.w-100 {
     flex: 0 0 100%;
 }
+
 .campo textarea {
     height: 4rem;
 }
@@ -314,6 +373,150 @@ h3 {
     justify-content: flex-end;
 }
 
-.footer {
+footer {
+    background-color: #000;
+    color: #fff;
+    padding: 10px 0;
+    width: 100%;
     text-align: center;
+    z-index: 1000;
+    font-size: 1rem;
+}
+
+footer p {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    gap: 10px;
+}
+
+footer a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: normal;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+
+/* Estilo para los iconos */
+footer i {
+    margin-right: 5px;
+    font-size: 14px;
+}
+
+
+/* Estilos para la sección de proyectos */
+.proyectos {
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
+    display: grid;
+    grid-template-columns: 1fr; /* Una columna por defecto */
+    gap: 2rem; /* Espacio entre proyectos */
+    margin-top: 2rem;
+}
+
+@media (min-width: 768px) {
+    .proyectos {
+        grid-template-columns: 1fr 1fr; /* Dos columnas para pantallas más grandes */
+    }
+}
+
+/* Estilos para cada proyecto */
+.proyecto {
+    background-color: rgb(255, 255, 255);
+    padding: 2rem;
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 11px 15px -9px rgba(0, 0, 0, 0.63);
+    -moz-box-shadow: 0px 11px 15px -9px rgba(0, 0, 0, 0.63);
+    box-shadow: 0px 11px 15px -9px rgba(0, 0, 0, 0.63);
+    text-align: center;
+}
+
+/* Títulos de proyectos */
+.proyecto h3 {
+    color: var(--secundario);
+    font-size: 1.8rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+}
+
+
+/* Descripción de proyectos */
+.proyecto p {
+    color: var(--gris);
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+}
+
+/* Estilo para el enlace activo */
+.navegacion a.activo {
+    color: var(--primario);
+    font-weight: 700;
+    border-bottom: 2px solid var(--primario); /* Puedes usar un subrayado para resaltar el activo */
+}
+.navegacion a.activo:hover {
+    color: var(--oscuro);
+    font-weight: 700;
+    border-bottom: 2px solid var(--primario); /* Puedes usar un subrayado para resaltar el activo */
+}
+
+
+/* Contenedor de imágenes */
+.imagenes-proyecto {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+/* Estilo de las imágenes dentro de los proyectos */
+.imagenes-proyecto img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Estilo para la sección de proyectos */
+#proyectos {
+    margin-top: 1rem;
+    padding: 3rem;
+    background-color: rgba(245, 245, 245, 1);
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 11px 15px -9px rgba(0, 0, 0, 0.63);
+    -moz-box-shadow: 0px 11px 15px -9px rgba(0, 0, 0, 0.63);
+    box-shadow: 0px 11px 15px -9px rgba(0, 0, 0, 0.63);
+}
+
+.servicios{
+    margin-top: 1rem;
+    padding: 3rem;
+    background-color: rgba(245, 245, 245, 1);
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 11px 15px -9px rgba(0, 0, 0, 0.63);
+    -moz-box-shadow: 0px 11px 15px -9px rgba(0, 0, 0, 0.63);
+    box-shadow: 0px 11px 15px -9px rgba(0, 0, 0, 0.63);
+    margin-bottom: 2rem
+}
+
+/* Título de la sección */
+#proyectos h2 {
+    text-align: center;
+    color: var(--oscuro);
+    font-size: 2.4rem;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    margin-top: 3rem;
+}
+
+#proyectos .boton {
+    background-color: var(--secundario);
+    color: var(--blanco);
+    margin-top: 3rem;
+    padding: .5rem 3rem;
+    border-radius: 5px;
+    font-weight: 700;
 }
