--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,9 @@ p {
 }
 
 #habilidades{
-    margin-top: 1rem;
+    margin-top: 0;
     margin-bottom: 2rem;
+    background-color: #F5F5F5;
 }
 
 /* Estilos del Header */
