--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,12 @@ p {
 }
 
 #habilidades{
-    margin-top: 0;
-    margin-bottom: 2rem;
-    background-color: #F5F5F5;
+    margin-top: 1rem;
+    padding: 3rem;
+    background-color: rgba(245, 245, 245, 1);
+    border-radius: 10px;
+    box-shadow: 0px 11px 15px -9px rgba(0, 0, 0, 0.63);
+    margin-bottom: 3rem;
 }
 
 /* Estilos del Header */
