--- a/css/style.css
+++ b/css/style.css
@@ -653,7 +653,7 @@ h3 {
         top: 60px;
         left: 0;
         right: 0;
-        background-color: var(--secundario);
+        background-color: var(--oscuro);
         text-align: center;
         width: 100%;
     }
