--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,15 @@ html {
 }
 
 p {
+    display: flex;
     line-height: 2;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    margin-bottom: 2rem;
+    font-size: 1.2rem;
+
 }
 
 #habilidades{
@@ -415,8 +423,6 @@ h3 {
     padding: 3rem;
     background-color: rgba(245, 245, 245, 1);
     border-radius: 10px;
-
-    box-shadow: 0px 11px 15px -9px rgba(0, 0, 0, 0.63);
     margin-bottom: 2rem
 }
 
@@ -448,7 +454,7 @@ h3 {
     background-color: #F5F5F5;
     padding: 1rem;
     border-radius: 10px;
-    box-shadow: 0px 11px 15px -9px rgba(0, 0, 0, 0.63);
+    box-shadow: 0px 11px 15px -9px rgba(0, 0, 0, 0.2);
     text-align: center;
     width: 100%;
 }
@@ -473,11 +479,15 @@ h3 {
 }
 
 .imagenes-proyecto img {
-    width: 100%;
+    width: 80%;
+    margin-bottom: 2rem;
     height: auto;
 
 }
 
+.h2_hero{
+    margin-top: 7rem;
+}
 /* Mejoras específicas para pantallas móviles */
 @media (max-width: 768px) {
     #proyectos {
@@ -527,9 +537,16 @@ h3 {
         background-color: #F5F5F5;
         padding: 1rem;
         border-radius: 10px;
-        box-shadow: 0px 11px 15px -9px rgba(0, 0, 0, 0.63);
         text-align: center;
         width: 100%
+    }
+
+    #habilidades{
+        margin-top: 1rem;
+        padding: 1rem;
+        background-color: rgba(245, 245, 245, 1);
+        border-radius: 10px;
+        margin-bottom: 3rem;
     }
 }
 
