--- a/css/style.css
+++ b/css/style.css
@@ -206,16 +206,15 @@ h3 {
 
 .hero {
     height: 450px;
-    background-image: url(../img/hero.jpg);
+    background-image: url(../img/fondo.webp);
     background-size: cover;
     margin-bottom: 2rem;
     position: relative;
 }
 
 .contenido-hero {
-    background-color: rgb(0 0 0 / 70%);
+    background-color: rgb(0 0 0 / 50%);
     /** Otra opción **/
-    background-color: rgba(0, 0, 0, .7);
     position: absolute;
     width: 100%;
     height: 100%;
