--- a/css/style.css
+++ b/css/style.css
@@ -762,16 +762,22 @@ footer i {
     footer {
         padding: 1.5rem 1rem;
         font-size: 0.9rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
-    footer p {
-        margin: 0;
-    }
+    
 
     footer a {
-        display: block;
+        display: flex;
+        /* flex-direction: row;
+        align-items: center; */
         /* Los enlaces se apilan en móviles */
         margin: 0.5rem 0;
+        text-align: center;
+        justify-content: center;
+        line-height: 1rem;
     }
 
     footer i {
