--- a/css/style.css
+++ b/css/style.css
@@ -820,3 +820,10 @@ footer i {
     box-shadow: 0px 11px 15px -9px rgba(0, 0, 0, 0.63);
     margin-bottom: 2rem;
 }
+
+.correo input[type="email"] {
+    width: 100%;
+    padding: .5rem;
+    border: none;
+    border-radius: .5rem;
+}
